# FS-Enhancer-Extreme

./: README.md  README4en-US.md  README4zh-Hant.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/android/hardware/security/keymint/: IRemotelyProvisionedComponent.aidl  MacedPublicKey.aidl  ProtectedData.aidl
app/src/main/aidl/io/github/xtrlumen/vbmeta/keystore/: IAndroidKeyStore.aidl
app/src/main/java/android/app/: ActivityThread.java
app/src/main/java/io/github/xtrlumen/vbmeta/: AppApplication.java  Entry.java  Provider.java  Provider.kt  log.java
app/src/main/java/io/github/xtrlumen/vbmeta/attestation/: Asn1Attestation.java  Asn1Utils.java  Attestation.java  AttestationPackageInfo.java  (+13 more)
fseed/: Cargo.toml  build.gradle.kts  build.rs  cargopp
fseed/src/: bridge.rs  cli.rs  conflict.rs  ctl.rs  define.rs  description.rs  main.rs  packagelist.rs  passprop.rs  passvbhash.rs  securitypatch.rs  util_functions.rs  webui.rs
fseed/src/envcollect/: apatch.rs  kernelsu.rs  magisk.rs  mod.rs
fsees/: Cargo.toml  build.gradle.kts
fsees/src/: main.rs
fseeu/: Cargo.toml  build.gradle.kts
fseeu/src/: lib.rs
fseev/: Cargo.toml  build.gradle.kts
fseev/src/: lib.rs
module/: build.gradle.kts
module/src/: action.sh  customize.sh  keybox.xml  module.base  module.prop  post-fs-data.sh  service.sh  uninstall.sh  verify.sh
module/src/script/: state.sh  util_functions.sh
tseed/: build.gradle.kts
tsees/: build.gradle.kts
(+12 files in other folders)
