cargo-features = ["trim-paths"]

[package]
name = "fseed"
edition = "2024"
authors = ["XtrLumen"]

[dependencies]
clap = {
    version = "4.6.1",
    features = ["derive"]
}
libc = "1.0.0-alpha.3"
regex = "1.13.1"
anyhow = "1.0.103"
getrandom = "0.4.3"
libloading = "0.9.0"

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "z"
trim-paths = "all"
incremental = false
codegen-units = 1