cargo-features = ["trim-paths"]

[package]
name = "fseeu"
edition = "2024"
authors = ["XtrLumen"]

[lib]
name = "utils"
crate-type = ["dylib"]

[dependencies]
hex = "0.4"
libc = "1.0.0-alpha.3"
blake3 = "1.8"
ed25519-compact = "2.0"

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "z"
trim-paths = "all"
incremental = false
codegen-units = 1